# Lucent

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg.json
app/editor/: CMakeLists.txt  editor.manifest  editor.rc.in
app/editor/include/: Application.h  EditorIcons.h  EditorSettings.h  EditorUI.h  MaterialGraphPanel.h  SceneIO.h  UndoStack.h  Win32FileDialogs.h
app/editor/src/: Application.cpp  EditorSettings.cpp  EditorUI.cpp  MaterialGraphPanel.cpp  SceneIO.cpp  UndoStack.cpp  Win32FileDialogs.cpp  main.cpp
cmake/: DownloadFile.cmake
docs/: README.md  architecture.md  editor_workflow.md  icon_pack.md  rendering.md
docs/milestones/: A_foundations.md
engine/assets/: CMakeLists.txt
engine/assets/include/lucent/assets/: Material.h  Mesh.h  MeshRegistry.h  ModelLoader.h  Texture.h
engine/assets/src/: Material.cpp  Mesh.cpp  MeshRegistry.cpp  ModelLoader.cpp  Texture.cpp
engine/core/: CMakeLists.txt
engine/core/include/lucent/core/: Assert.h  Base.h  Core.h  Log.h
engine/core/src/: Assert.cpp  Log.cpp
engine/gfx/: CMakeLists.txt
engine/gfx/include/lucent/gfx/: Buffer.h  DebugUtils.h  DescriptorAllocator.h  Device.h  EnvironmentMap.h  EnvironmentMapLibrary.h  FinalRender.h  Gfx.h  Image.h  OptiXDenoiser.h  PipelineBuilder.h  RenderCapabilities.h  RenderSettings.h  Renderer.h  Swapchain.h  TracerCompute.h  TracerRayKHR.h  VkResultUtils.h  VulkanContext.h
engine/gfx/src/: Buffer.cpp  DebugUtils.cpp  DescriptorAllocator.cpp  Device.cpp  EnvironmentMap.cpp  EnvironmentMapLibrary.cpp  FinalRender.cpp  Image.cpp  OptiXDenoiser.cpp  PipelineBuilder.cpp  RenderCapabilities.cpp  Renderer.cpp  Swapchain.cpp  TracerCompute.cpp  TracerRayKHR.cpp  VulkanContext.cpp
engine/material/: CMakeLists.txt
engine/material/include/lucent/material/: MaterialAsset.h  MaterialCompiler.h  MaterialGraph.h  MaterialGraphEval.h  MaterialIR.h
engine/material/src/: MaterialAsset.cpp  MaterialCompiler.cpp  MaterialGraph.cpp  MaterialGraphEval.cpp  MaterialIR.cpp
engine/mesh/: CMakeLists.txt
engine/mesh/include/lucent/mesh/: EditableMesh.h  MeshOps.h  Triangulator.h
engine/mesh/src/: EditableMesh.cpp  MeshOps.cpp  Triangulator.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/lucent/scene/: Components.h  EditorCamera.h  Entity.h  Scene.h  Scene.inl
engine/scene/src/: Components.cpp  EditorCamera.cpp  Entity.cpp  Scene.cpp
shaders/: CMakeLists.txt  compile_shaders.ps1  composite.frag  composite.vert  grid.frag  grid.vert  mesh.frag  mesh.vert  postfx.frag  postfx.vert  rt_closesthit.rchit  rt_miss.rmiss  rt_raygen.rgen  rt_shadow.rchit  rt_shadow_miss.rmiss  rt_volume.rchit  rt_volume.rint  shadow_depth.vert  skybox.frag  skybox.vert  traced.comp  triangle.frag  triangle.vert
shaders/compiled/: .gitkeep
tests/: CMakeLists.txt  test_core.cpp
triplets/: x64-windows.cmake
